Main Bord Design

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,14 @@ qt_add_qml_module(appDyxi1
         Main.qml
         RESOURCES images.qrc
         RESOURCES lib.qrc
+        RESOURCES javascript.qrc
 )
+
+qt_add_resources(appDyxi1
+    "assets"
+     PREFIX "/"
+     FILES "Artboard 1.png"
+ )
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
